--- a/MLDeployment/Genitic_insight/templates/home.html
+++ b/MLDeployment/Genitic_insight/templates/home.html
@@ -10,6 +10,12 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    
+    <!-- Main.CSS -->
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
     <!-- home.CSS -->
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
     
