--- a/MLDeployment/Genitic_insight/templates/partials/navbar.html
+++ b/MLDeployment/Genitic_insight/templates/partials/navbar.html
@@ -1,36 +1,43 @@
 <!-- templates/partials/navbar.html -->
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
-        <div class="container">
-            <a class="navbar-brand fw-bold" href="#">Genitic_Insight</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/' %}active{% endif %}" 
-                           href="{% url 'home' %}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/feature_extraction/' %}active{% endif %}" 
-                           href="{% url 'feature_extraction' %}">Features</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/data_visualization/' %}active{% endif %}" 
-                           href="{% url 'data_visualization' %}">Visualization</a>
-                    </li>
-                    
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/module-selection/' %}active{% endif %}" 
-                           href="{% url 'module_selection' %}">Modules</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/evaluation-values/' %}active{% endif %}" 
-                           href="{% url 'evaluation_values' %}">Evaluation</a>
-                    </li>
-                </ul>
-            </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top shadow-sm">
+    <div class="container">
+        <a class="navbar-brand fw-bold text-primary" href="{% url 'home' %}">Genitic_Insight</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link {% if request.path == '/' %}active{% endif %}" 
+                       href="{% url 'home' %}">
+                        <i class="bi bi-house-door me-1"></i>Home
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if request.path == '/feature_extraction/' %}active{% endif %}" 
+                       href="{% url 'feature_extraction' %}">
+                        <i class="bi bi-gear me-1"></i>Features
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if request.path == '/data_visualization/' %}active{% endif %}" 
+                       href="{% url 'data_visualization' %}">
+                        <i class="bi bi-bar-chart-line me-1"></i>Visualization
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if request.path == '/module-selection/' %}active{% endif %}" 
+                       href="{% url 'module_selection' %}">
+                        <i class="bi bi-menu-button-wide me-1"></i>Modules
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if request.path == '/evaluation-values/' %}active{% endif %}" 
+                       href="{% url 'evaluation_values' %}">
+                        <i class="bi bi-graph-up me-1"></i>Evaluation
+                    </a>
+                </li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
