--- a/MLDeployment/Genitic_insight/templates/partials/footer.html
+++ b/MLDeployment/Genitic_insight/templates/partials/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="bg-primary bg-gradient pt-4 pb-3 mt-5 shadow-lg">
+<footer class="pt-4 pb-3 mt-5 shadow-lg" style="background-color: #2980b9;" id="footer">
     <div class="container text-center">
         <!-- Social Links -->
         <div class="d-flex justify-content-center gap-4 mb-3">
