--- a/MLDeployment/Genitic_insight/templates/partials/navbar.html
+++ b/MLDeployment/Genitic_insight/templates/partials/navbar.html
@@ -1,7 +1,11 @@
 <!-- templates/partials/navbar.html -->
+{% load static %}
 <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top shadow-sm">
     <div class="container">
-        <a class="navbar-brand fw-bold text-primary" href="{% url 'home' %}">Genitic_Insight</a>
+        <a class="navbar-brand fw-bold" href="{% url 'home' %}" style="color: #2980b9;">
+            <img src="{% static 'images/LOGO.png' %}" alt="Genitic_Insight Logo" height="30" class="d-inline-block align-top me-2">
+            Genitic_Insight
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -19,7 +23,6 @@
                         <i class="bi bi-gear me-1"></i>Features
                     </a>
                 </li>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link {% if request.path == '/module-selection/' %}active{% endif %}" 
                        href="{% url 'module_selection' %}">
@@ -31,7 +34,6 @@
                        href="{% url 'about' %}">
                         <i class="bi bi-info-circle me-1"></i>About
                     </a>
-                </li>
                 </li>
             </ul>
         </div>
